tests/ui/issues/issue-40288.stderr
error[E0506]: cannot assign to `*refr` because it is borrowed
  --> $DIR/issue-40288.rs:16:5
   |
LL |     save_ref(&*refr, &mut out);
   |              ------ `*refr` is borrowed here
...
LL |     *refr = 3;
   |     ^^^^^^^^^ `*refr` is assigned to here but it was already borrowed
...
LL |     println!("{:?}", out[0]);
   |                      ------ borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
